--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -18,7 +18,12 @@
          name="texto"
          placeholder="Mensaje..."
          autofocus
-         autocomplete="off">
+         autocomplete="off"
+         maxlength="100">
 
 
 </form>
+
+<button class="btn btn-danger mt-3" (click)="logoff()">
+  Cerrar sesión
+</button>
