--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 
 
-
 body{
     font-size: 16px;
     font-family: 'Open Sans';
@@ -21,7 +20,7 @@ body{
  }
  
  .navbar{
- 
+     padding: 0px !important;
      position: fixed;
      background-color: var(--bg-primary); 
      transition: width 200ms ease;
@@ -35,6 +34,7 @@ body{
      flex-direction: column;
      align-items: center;
      height: 100%;
+     width: 100%;
  }
  
  .logo{
@@ -108,16 +108,16 @@ body{
    }
 
    body::-webkit-scrollbar{
-    width: 0.25rem;
-}
+    width: 0.4rem;
+    }
 
-body::-webkit-scrollbar-track{
-    background: #1e1e24;
-}
+    body::-webkit-scrollbar-track{
+        background: #1e1e24;
+    }
 
-body::-webkit-scrollbar-thumb{
-    background: #6649b8;
-}
+    body::-webkit-scrollbar-thumb{
+        background: #6649b8;
+    }
    
   
  
@@ -126,6 +126,7 @@ body::-webkit-scrollbar-thumb{
    @media only screen and (min-width: 600px){
  
      .navbar{
+         z-index: 1000 !important;
          top:0;
          width: 5rem;
          height: 100vh;
@@ -138,6 +139,9 @@ body::-webkit-scrollbar-thumb{
          display: block;
      }
  
+     .navbar:hover ~ .ogmain{
+        background-color: green !important;
+    }
    }
  
    /* Small screen */
@@ -165,7 +169,7 @@ body::-webkit-scrollbar-thumb{
      }
  
    }
-/* footer {
+footer {
     position: fixed;
     bottom: 0px;
     left: 0px;
@@ -181,5 +185,25 @@ body::-webkit-scrollbar-thumb{
 
 .chat-input {
     margin-top: 10px;
-} */
+}
 
+
+
+ 
+ footer {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+}
+
+#chat-mensajes {
+    height: 300px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    overflow-y: scroll;
+}
+
+.chat-input {
+    margin-top: 10px;
+}
