--- a/src/app/pages/components/sidebar/sidebar.component.html
+++ b/src/app/pages/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
       
       <li class="logo">
         <a href="#" class="nav-link">
-          <span class="link-text logo-text">Fireship</span>
+          <span class="link-text logo-text"> Oscar<span class="fa-secondary">GB</span></span>
           <svg
             aria-hidden="true"
             focusable="false"
