--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,5 +1,5 @@
 <app-sidebar></app-sidebar>
-<main class="ogmain">
+<main [ngClass] = "sharedService.expandedSidebar ? 'expandedSidebar' : 'not-expandedSidebar'">
   <router-outlet></router-outlet>
 </main>
 
