--- a/src/app/pages/components/sidebar/sidebar.component.css
+++ b/src/app/pages/components/sidebar/sidebar.component.css
@@ -1,22 +1,19 @@
 .body{
-   color: black;
-   background-color: white;
-   margin: 0;
-   padding: 0;
-   --text-primary: #b6b6b6;
-    --text-secondary: #ececec;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418;
-    --transition-speed: 400ms;
+    font-size: 16px;
+    font-family: 'Open Sans';
+    color: black;
+    background-color: white;
+    margin: 0;
+    padding: 0;
+    --text-primary: #b6b6b6;
+     --text-secondary: #ececec;
+     --bg-primary: #23232e;
+     --bg-secondary: #141418;
+     --transition-speed: 500ms;
 }
 
-main{
-    margin-left: 5rem;
-    padding: 1rem;
-}
-
-.navbar{
-
+ .navbar{
+    padding: 0px !important;
     position: fixed;
     background-color: var(--bg-primary); 
     transition: width 200ms ease;
@@ -30,8 +27,10 @@ main{
     flex-direction: column;
     align-items: center;
     height: 100%;
+    width: 100%;
 }
 
+ 
 .logo{
     font-weight: bold;
     text-transform: uppercase;
@@ -42,6 +41,8 @@ main{
     font-size: 1.5rem;
     letter-spacing: 0.3ch;
     width: 100%;
+    cursor: pointer;
+
 }
 
 .logo svg{
@@ -49,33 +50,16 @@ main{
     transition: transform var(--transition-speed);
 }
 
-.navbar:hover .logo svg {
-    transform: rotate(-180deg);
-}
-
 .nav-item {
     width: 100%;
-  }
+}
   
-  .nav-item:last-child {
+.nav-item:last-child {
     margin-top: auto;
     margin-bottom: 20px;
-  }
+}
 
-  .fa-primary{
-      color: #ff7eee;
-  }
-
-  .fa-secondary{
-      color: #df49a6
-  }
-
-  .fa-primary,
-  .fa-secondary{
-      transition: var(--transition-speed);
-  }
-  
-  .nav-link {
+.nav-link {
     display: flex;
     align-items: center;
     height: 5rem;
@@ -83,49 +67,74 @@ main{
     text-decoration: none;
     filter: grayscale(100%) opacity(0.7);
     transition: var(--transition-speed);
-  }
-  
-  .nav-link:hover {
+}
+
+.nav-link:hover {
     filter: grayscale(0%) opacity(1);
     background: var(--bg-secondary);
     color: var(--text-secondary);
-  }
-  
-  .link-text {
+}
+
+.link-text {
     display: none;
     margin-left: 1rem;
-  }
-  
-  .nav-link svg {
+
+}
+
+.nav-link svg {
     width: 2rem;
     min-width: 2rem;
     margin: 0 1.5rem;
-  }
-  
- 
+}
 
+.expand-menu{
+    font-size: 2rem;
+    width: 2rem;
+    min-width: 2rem;
+    margin: 0 1.5rem;
+    position: fixed;
+}
 
-  /* Big screen */
-  @media only screen and (min-width: 600px){
-
-    .navbar{
-        top:0;
-        width: 5rem;
-        height: 100vh;
+/* Big screen */
+@media only screen and (min-width: 600px){
+    
+    .toggled-nav{
+        width: 16rem !important;
     }
-    .navbar:hover{
-        width: 16rem;
-    }
-  
-    .navbar:hover .link-text{
+    .toggled-nav .link-text{
         display: block;
+        opacity: 0;
+    }
+    
+    .toggled-nav .expand-menu{
+        margin-left: 12rem;
+        transition: all 300ms;
+    }
+    
+    
+    .untoggled-nav{
+        width: 5rem !important; 
+    }
+    .untoggled-nav .link-text{
+        opacity: 0;
+        display: none;
+    }
+    .untoggled-nav .expand-menu{
+        margin-left: 1.5rem;
+        transition: all 150ms;
+    }
+    
+    
+    .text-opacity{
+        transition: all var(--transition-speed);
+        opacity: 1 !important;
     }
 
-  }
+}
 
-  /* Small screen */
-  @media only screen and (max-width: 600px){
-
+/* Small screen */
+@media only screen and (max-width: 600px){
+ 
     .navbar{
         bottom: 0;
         width: 100vw;
@@ -143,8 +152,5 @@ main{
         justify-content: center;
     }
 
-    main{
-        margin: 0;
-    }
+}
 
-  }
