--- a/src/app/pages/components/sidebar/sidebar.component.css
+++ b/src/app/pages/components/sidebar/sidebar.component.css
@@ -13,6 +13,7 @@
 }
 
  .navbar{
+    /* margin-top: 4rem; */
     padding: 0px !important;
     position: fixed;
     background-color: var(--bg-primary); 
@@ -62,7 +63,7 @@
 .nav-link {
     display: flex;
     align-items: center;
-    height: 5rem;
+    height: 4rem;
     color: var(--text-primary);
     text-decoration: none;
     filter: grayscale(100%) opacity(0.7);
@@ -88,7 +89,6 @@
 }
 
 .expand-menu{
-    font-size: 2rem;
     width: 2rem;
     min-width: 2rem;
     margin: 0 1.5rem;
