--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,4 +1,5 @@
 <app-sidebar></app-sidebar>
+<app-header></app-header>
 <main [ngClass] = "sharedService.expandedSidebar ? 'expandedSidebar' : 'not-expandedSidebar'">
   <router-outlet></router-outlet>
 </main>
