--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,7 @@ body{
     main{
         margin-left: 5rem;
         padding: 1rem;
+        padding-top: 4.5rem; /* If app-header */
     }
  
      .navbar{
