--- a/src/app/pages/components/header/header.component.html
+++ b/src/app/pages/components/header/header.component.html
@@ -1,6 +1,12 @@
-<nav>
-  <ul>
-    <li>bruh</li>
-    <li>BRAH</li>
+<nav class="header">
+  <ul class="header-list">
+    <li class="header-item logo">
+      <a class="nav-link">
+        <span class="link-text logo-text"
+          [class.text-opacity]="toggled">
+          APP<span class="fa-secondary">NAME</span>
+        </span>
+      </a>
+    </li>
   </ul>
 </nav>
