Finished base sidebar, added searchbar

--- a/src/app/pages/components/header/header.component.html
+++ b/src/app/pages/components/header/header.component.html
@@ -8,5 +8,23 @@
         </span>
       </a>
     </li>
+
+    <li class="header-item header-r-item">
+      <img class="profile-img" src="https://i.etsystatic.com/18719426/r/il/be13d8/1708009979/il_570xN.1708009979_9e9g.jpg" alt="">
+    </li>
+
+    <li class="header-item header-r-item">
+      <form class="">
+        <div class="input-group" id="search" data-target-input="nearest">
+          <input type="text" class="form-control search-input" data-target="#search">
+          <div class="input-group-append" data-target="#search">
+              <a type="submit" class="input-group-text search-button"><i class="fa fa-search"></i></a>
+          </div>
+        </div>
+      </form>
+    </li>
+
+       
   </ul>
+  
 </nav>
