--- a/src/app/pages/components/header/header.component.css
+++ b/src/app/pages/components/header/header.component.css
@@ -9,9 +9,15 @@
 }
 
 .header-item{
+    float: left;
     height: 100% !important;
     list-style: none;
     align-items: center;
+}
+.header-r-item{
+    margin-top: 0.8rem;
+    margin-right: 1rem;
+    float:right;
 }
 .header-list{
     margin-bottom: 0px !important;
@@ -31,6 +37,52 @@
     background: var(--bg-secondary);
     font-size: 1.5rem;
     letter-spacing: 0.3ch;
-    width: 100%;
     cursor: pointer;
 }
+
+
+
+
+.search-input{
+    -webkit-appearance: none;
+    outline: none;
+    box-shadow: none !important;
+    border-style: solid;
+    border-width: 1px;
+    background-color: #464649;
+    border-color: #464649;
+    color:white;
+    -webkit-transition: all .2s ease-out;
+    -moz-transition: all .2s ease-out;
+    -ms-transition: all .2s ease-out;
+    -o-transition: all .2s ease-out;
+    transition: all .2s ease-out
+}
+.search-input:hover{
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray; 
+}
+.search-input:focus{
+    background-color: #000;
+    border-color: var(--fa-secondary);
+    /* transition: all 100ms !important; */
+}
+
+.search-button{
+    background-color: #3a3a3d;
+    border-color: #3a3a3d ;
+    /* color: white; */
+    cursor: pointer;
+}
+.fa-search{
+    color: #efeff1;
+}
+
+.profile-img{
+    width: 2.4rem;
+    border-radius: 100%;
+}
+
+
+
