--- a/src/app/pages/components/sidebar/sidebar.component.css
+++ b/src/app/pages/components/sidebar/sidebar.component.css
@@ -46,6 +46,8 @@
 .logo-text{
     padding-left: 0.5rem;
     font-size: 1rem;
+    filter: grayscale(100%) opacity(0.7);
+
 }
 
 .logo svg{
@@ -64,12 +66,26 @@
 
 .nav-link {
     display: flex;
+    height: 4rem;
+    align-items: center;  
+}
+
+
+
+.nav-link-logo:hover{
+    filter: grayscale(0%) opacity(1);
+    background-color: green;
+}
+
+.nv-hover{
+    display: flex;
     align-items: center;
     height: 4rem;
-    color: var(--text-primary);
     text-decoration: none;
     filter: grayscale(100%) opacity(0.7);
+    color: var(--text-primary);
     transition: var(--transition-speed);
+
 }
 
 
@@ -114,8 +130,25 @@
     }
     
     .toggled-nav .expand-menu{
-        margin-left: 13rem;
+        margin-left: 12.3rem;
         transition: all 300ms;
+    }
+
+    .toggled-nav .nav-link-logo{
+        border-radius: 10px;
+
+        filter: grayscale(100%) opacity(0.7);
+        /* margin-left: 0px !important; */
+        padding: 0.5rem 2.4rem 0.5rem 1rem !important;
+        /* border-style: solid; */
+        /* border-color: red;
+        border-radius: 2px;
+        border-width: 10px; */
+    }
+    .toggled-nav .nav-link-logo:hover{
+        
+        background-color: var(--bg-secondary);
+        filter: grayscale(0%) opacity(1);
     }
     
     
@@ -127,7 +160,7 @@
         display: none;
     }
     .untoggled-nav .expand-menu{
-        margin-left: 1.5rem;
+        margin-left: 0.8rem;
         transition: all 150ms;
     }
     
@@ -136,6 +169,27 @@
         transition: all var(--transition-speed);
         opacity: 1 !important;
     }
+
+    .untoggled-nav .nav-link-logo{
+        border-radius: 10px;
+        filter: grayscale(100%) opacity(0.7);
+        margin-left: 0.8rem !important;
+        margin-top: -0.2rem;
+        padding: 0.5rem 2.4rem 0.5rem 1rem !important;
+        /* border-style: solid; */
+        /* border-color: red;
+        border-radius: 2px;
+        border-width: 10px; */
+    }
+    .untoggled-nav .nav-link-logo:hover{
+        /* filter: grayscale(0%) opacity(1); */
+        /* border-radius: 30%;
+        background-color: green; */
+        background-color: var(--bg-secondary);
+        filter: grayscale(0%) opacity(1);
+    }
+
+
 
 }
 
