--- a/src/app/pages/components/sidebar/sidebar.component.html
+++ b/src/app/pages/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <ul class="navbar-nav">
       
       <li class="logo" >
-        <a class="nav-link">
+        <div class="nav-link">
           <span class="link-text logo-text"
             [class.text-opacity]="toggled">
             SECTIONS
@@ -11,14 +11,14 @@
           
             <i
             (click)="toggle()"
-              class="fa expand-menu fa-secondary" 
+              class="nav-link-logo fa expand-menu fa-secondary" 
               [class.toggled] = "sharedService.expandedSidebar"
               [class.untoggled] = "!sharedService.expandedSidebar"
               [ngClass] = "sharedService.expandedSidebar ? 'fa-arrow-left' : 'fa-bars'"
               aria-hidden="true">
             </i>
             
-        </a>
+          </div>
       </li>
 
 
