--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,8 @@ body{
      --text-secondary: #ececec;
      --bg-primary: #23232e;
      --bg-secondary: #141418;
+     --fa-primary: #ff7eee;
+     --fa-secondary: #df49a6;
      --transition-speed: 400ms;
 }
 
@@ -55,8 +57,8 @@ body{
 
     main{
         margin-left: 5rem;
-        padding: 1rem;
-        padding-top: 4.5rem; /* If app-header */
+        padding: 3rem;
+        padding-top: 5.5rem; /* If app-header */
     }
  
      .navbar{
