--- a/src/app/pages/components/header/header.component.html
+++ b/src/app/pages/components/header/header.component.html
@@ -1,5 +1,6 @@
 <nav class="header">
   <ul class="header-list">
+    <app-slider-sidebar class="header-item"></app-slider-sidebar>
     <li class="header-item logo">
       <a class="nav-link">
         <span class="link-text logo-text"
